# Contract_intelligence

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  MESSAGE_FOR_YOU.md  README.md  docker-compose.yml  main.py  pyproject.toml
api/: analyze.py  models.py  router.py  status.py  upload.py
core/: celery_app.py  config.py  ocr_engine.py  vector_db.py
extraction/: docx_extractor.py  image_extractor.py  pdf_extractor.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  config.ts  index.css
frontend/src/components/: ActiveJobs.tsx  Explorer.tsx  Header.tsx  Sidebar.tsx  UploadZone.tsx
models/: fine_tune.py  qa_pipeline.py
pipeline/: document_pipeline.py
processing/: chunker.py  cleaner.py
static/: index.html
static/css/: styles.css
static/js/: app.js
tasks/: pipeline_tasks.py
