[project]
name = "contract-intelligence"
version = "1.0.0"
description = "AI-powered legal contract analysis platform using RAG + LLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "fastapi[standard]>=0.136.1",
    "gevent>=26.4.0",
    "ipykernel>=7.2.0",
    "setuptools",
    "paddlepaddle-gpu>=2.6.0",
    "paddleocr>=2.8.0",
    "pymupdf>=1.24.0",
    "numpy>=1.24.0",
    "langdetect>=1.0.9",
    "pillow>=12.2.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.27",
    "redis>=7.4.0",
    "transformers>=5.8.0",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.5.0",
    "torch>=2.10.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.31.0",
]


[tool.setuptools.packages.find]
include = [
    "api*",
    "core*",
    "extraction*",
    "ingestion*",
    "pipeline*",
    "processing*",
    "tasks*",
]
